<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:minWidth="@dimen/dialog_width"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:background="@drawable/layout_speech_bg"
    android:padding="@dimen/dialog_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DialogHeader"
        android:text="@string/feedback_header"/>

    <EditText
        android:id="@+id/message_input"
        style="@style/EditText"
        android:hint="@string/feedback_hint"
        android:gravity="top|left"
        android:layout_width="match_parent"
        android:layout_height="128dp" />

    <LinearLayout
        android:id="@+id/submit"
        style="@style/ButtonContainer"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback" />
    </LinearLayout>

</LinearLayout>