<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:clipChildren="false"
    android:orientation="vertical">

    <!-- Background circle-->
    <com.fuzz.android.view.AnimatedBackgroundCircle
        android:layout_width="@dimen/background_circle_1_size"
        android:layout_height="@dimen/background_circle_1_size"
        android:id="@+id/background_circle_1"
        android:background="@drawable/circle"
        android:backgroundTint="@color/light_red"
        android:translationX="-54dp"
        android:translationY="-64dp"
        app:translation_duration="45000"
        app:translation_x_to="-10dp"
        app:translation_y_to="-16dp" />

    <com.fuzz.android.view.AnimatedBackgroundCircle
        android:layout_width="@dimen/background_circle_2_size"
        android:layout_height="@dimen/background_circle_2_size"
        android:id="@+id/background_circle_21"
        android:layout_gravity="bottom|right"
        android:background="@drawable/circle"
        android:backgroundTint="@color/lightest_blue"
        android:translationX="20dp"
        android:translationY="40dp"
        app:translation_duration="60000"
        app:translation_x_to="-120dp"
        app:translation_y_to="-10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!-- Header -->
        <com.fuzz.android.view.HeaderTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/post_order_header"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <!-- Subheader -->
        <TextView
            android:id="@+id/subheader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/post_order_subheader"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>


    <!-- Padding so shadowing doesn't get clipped -->
    <com.fuzz.android.view.OrderEtaTimer
        android:id="@+id/timer"
        android:layout_width="@dimen/eta_timer_size"
        android:layout_height="@dimen/eta_timer_size"
        android:layout_gravity="center"
        android:padding="36dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="24:15"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:id="@+id/thanks_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:visibility="gone"
        android:clipToPadding="false"
        android:layout_gravity="center"
        android:orientation="vertical">

        <!-- Timer finish candy animation thing -->
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo_white_64dp" />

            <ImageView
                android:id="@+id/candy_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/post_order_candy" />

        </FrameLayout>

        <!-- Padding for font clipping-->
        <com.fuzz.android.view.HeaderTextView
            android:id="@+id/thanks_text"
            android:layout_width="wrap_content"
            android:translationY="-8dp"
            android:alpha="0"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:layout_height="wrap_content"
            android:text="@string/post_order_thanks" />

    </LinearLayout>

    <!-- Trivial message -->
    <TextView
        android:id="@+id/trivial_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="64dp"
        android:background="@drawable/layout_speech_bg"
        android:paddingBottom="12dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="12dp"
        android:text="Meddelande"
        android:textColor="@color/blue"
        android:textSize="17sp" />
</FrameLayout>