<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fuzz.android.activity.MainActivity">

    <FrameLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_bg"
        android:clipChildren="false"
        android:orientation="vertical">

        <include layout="@layout/main_background" />

        <!-- Action bar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:background="@color/light_blue"
            android:clipChildren="false">


            <FrameLayout
                android:layout_width="@dimen/action_bar_btn_size"
                android:layout_height="@dimen/action_bar_btn_size"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:onClick="showDraggingHints"
                android:focusable="true"
                android:stateListAnimator="@animator/stateanim_default">

                <!-- Background needs to be scaled programatically -->
                <View
                    android:id="@+id/article_info_btn_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="0"
                    android:background="@drawable/action_bar_btn_bg"
                    android:scaleX="0.25"
                    android:scaleY="0.25"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/article_info_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_info" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="@dimen/action_bar_btn_size"
                android:layout_height="@dimen/action_bar_btn_size"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:clickable="true"
                android:focusable="true"
                android:onClick="showShoppingCart"
                android:stateListAnimator="@animator/stateanim_default">

                <!-- Background needs to be scaled programatically -->
                <View
                    android:id="@+id/shopping_cart_btn_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:alpha="0"
                    android:background="@drawable/action_bar_btn_bg"
                    android:scaleX="0.25"
                    android:scaleY="0.25"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/shopping_cart_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_cart" />

            </FrameLayout>

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Frontpage items -->
            <com.fuzz.android.view.ArticlesContainerView
                android:id="@+id/articles_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="64dp">

                    <com.fuzz.android.view.HeaderTextView
                        android:id="@+id/category_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="64dp"
                        android:layout_marginRight="64dp"
                        android:layout_marginTop="12dp"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/popular_this_week"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <com.fuzz.android.view.ArticlesView
                        android:id="@+id/articles"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        android:clipToPadding="false"
                        android:overScrollMode="never"
                        android:paddingBottom="128dp"
                        android:paddingTop="60dp" />

                    <LinearLayout
                        android:id="@+id/no_items"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/articles_fetch_fail"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <!-- Categories button -->
                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:clickable="true"
                        android:onClick="showCategories"
                        android:src="@drawable/categories"
                        android:stateListAnimator="@animator/stateanim_default" />

                </FrameLayout>

                <!-- Categories -->
                <com.fuzz.android.view.CategoriesView
                    android:id="@+id/categories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_blue"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@null"
                    android:listSelector="@android:color/transparent"
                    android:overScrollMode="never"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:scrollbars="none"
                    android:visibility="gone" />
            </com.fuzz.android.view.ArticlesContainerView>

            <com.fuzz.android.view.LoadingIndicator
                android:id="@+id/articles_fetch_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="36dp"
                android:src="@drawable/ic_logo_white_36dp"
                android:visibility="gone" />

        </FrameLayout>

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_height"
            android:layout_centerInParent="true"
            android:clickable="false"
            android:scaleType="center"
            android:src="@drawable/ic_logo_white_36dp"
            android:tint="@color/action_bar_logo_light"
            android:tintMode="multiply" />

        <!-- Action bar overlay. Extra height to avoid alpha clipping -->
        <FrameLayout
            android:id="@+id/action_bar_overlay"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:clipChildren="false"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/article_info_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/note_info"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp"
                android:text="@string/drag_to_info"
                android:textColor="@color/white"
                android:translationX="48dp"
                android:translationY="24dp"
                android:visibility="gone" />


            <!-- Cart cost -->
            <TextView
                android:id="@+id/cart_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/cart_cost_bg"
                android:paddingBottom="3dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="3dp"
                android:text="@string/cart_cost"
                android:textColor="@color/white"
                android:translationX="-42dp"
                android:translationY="48dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/shopping_cart_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/note_cart"
                android:paddingBottom="8dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="8dp"
                android:text="@string/drag_to_cart"
                android:textColor="@color/white"
                android:translationX="-48dp"
                android:translationY="56dp"
                android:visibility="gone" />

        </FrameLayout>

    </FrameLayout>

    <!--
    For debugging bounds
    <com.fuzz.android.view.DebugOverlay
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="false"/>

        Testing categories tutorial
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="120dp"
        android:src="@drawable/ic_touch" />
-->


</FrameLayout>
